# ChangeLog for dev-python/storm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/storm/ChangeLog,v 1.9 2010/06/30 02:11:28 arfrever Exp $

  30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  storm-0.16.0.ebuild:
  Set PYTHON_DEPEND.

  21 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  storm-0.16.0.ebuild:
  Fix tests (bug #297191).

*storm-0.16 (30 Nov 2009)

  30 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +storm-0.16.0.ebuild:
  Version bump.

  05 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  storm-0.15.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*storm-0.15 (04 Sep 2009)

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -storm-0.12.ebuild,
  -storm-0.13.ebuild, +storm-0.15.ebuild:
  Bump to 0.15. Remove old

*storm-0.14 (15 Feb 2009)

  15 Feb 2009; Patrick Lauer <patrick@gentoo.org> +storm-0.14.ebuild:
  Bump to 0.14

*storm-0.13 (26 Oct 2008)

  26 Oct 2008; Jesus Rivero <neurogeek@gentoo.org> -storm-0.9.ebuild,
  +storm-0.13.ebuild:
  Version bump. Removed old version. Bug #244194

*storm-0.12 (19 Mar 2008)

  19 Mar 2008; Christian Hoffmann <hoffie@gentoo.org> +storm-0.12.ebuild:
  version bump to 0.12, also marking ~amd64 as it works fine for me on that
  arch

*storm-0.9 (10 Jul 2007)

  10 Jul 2007; Tiziano Müller <dev-zero@gentoo.org> +metadata.xml,
  +storm-0.9.ebuild:
  Initial commit.
