@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/storm
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/storm/ChangeLog,v 1.9 2010/06/30 02:11:28 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/storm/ChangeLog,v 1.10 2010/10/31 20:32:03 arfrever Exp $
+
+*storm-0.18 (31 Oct 2010)
+
+  31 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -storm-0.16.0.ebuild, +storm-0.18.ebuild:
+  Version bump.
 
   30 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   storm-0.16.0.ebuild:
